--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>CanvasX</title>
     <link rel="stylesheet" href="./sass/app.sass">
   </head>
 
   <body>
     <div class="Wrapper">
-      <h1>Welcome</h1>
+      <h1>CanvasX</h1>
     </div>
     
     <script src="./js/app.js"></script>
