Add App element and Sidebar html and css

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
 
   <body>
     <div id="app" class="Wrapper">
-      <h1>CanvasX</h1>
+			<h1>CanvasX</h1>
+			<main class="App">
+				<nav class="Sidebar">
+					<a href="#" class="Sidebar-item">Home</a>
+					<a href="#" class="Sidebar-item">Item 2</a>
+				</nav>
+			</main>
     </div>
     
     <script src="./js/app.js"></script>
